<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_to_laz</name>
  <version>0.0.0</version>
  <description>Export pointcloud and IMU data.</description>
  <maintainer email="michalpelka@gmail.com">Michal Pelka</maintainer>
  <license>apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>sensor_msgs</depend>
  <exec_depend>rclcpp</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
